# cesco_sllm

./: .env.example  .gitignore  README copy.md  README.md  RESULTS_SUMMARY.md  base_docs copy.csv  build_churn_dataset_copy2.py  config.py  env.txt  inference_best_model.py  local_train.py  main.py  make_train_data.sh  make_train_dataset.py  make_train_test_split_for_test.py  ml_dataset_WITH_PURCHASE_20251030_192912.csv  pyproject.toml  requirements.txt  run_test_inference.py  test.ipynb  test_final.ipynb
assets/: bugs_df.csv  prompt_instructions.txt  voc_category_final.csv
data/: final_test_outputs.csv  processed_test_dataset.json  unsloth_test_dataset.json  voc_multi_intent_sample.csv  voc_multi_intent_sample_nonclaim.csv
notebooks/: training_workflow.py
scripts/: examples.sh  quickstart.sh  run_inference.sh
src/: data_preparation.py  inference.py  inference_lora_adapters.py  inference_merged_model.py  prepare_unsloth_data.py  requirements.txt  sagemaker_training.py  test_retrieval_bm25.py  test_retrieval_performance_embeddings.py  test_retrieval_tfidf.py  training_script.py  unsloth_training.py
