[project]
name = "cesco-sllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.1.0",
    "nltk>=3.9.1",
    "openai>=1.108.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "peft>=0.17.1",
    "rouge-score>=0.1.2",
    "sagemaker>=2.220.0",
    "torch>=2.8.0",
    "transformers>=4.56.1",
    "xlwings>=0.33.15",
    "pyodbc>=5.2.0",
    "sqlalchemy>=2.0.0",
    "wandb>=0.22.2",
    "pyarrow>=21.0.0",
]
